# A2A_MCP_Workshop

./: .gitignore  README.md  requirements.txt
personalized_learning/: MULTI_TURN_GUIDE.md  README.md  pyproject.toml  requirements.txt
personalized_learning/a2a_agents/: README.md  client.py
personalized_learning/a2a_agents/orchestrator_agent/: agent_card.py  agent_executor.py  agents_registry.json
personalized_learning/a2a_agents/remote_agents/assessment_agent/: __main__.py  agent_card.py  agent_logic.py
personalized_learning/a2a_agents/remote_agents/study_plan_agent/: __main__.py  agent_logic.py
personalized_learning/docs/: architecture.md  exercises.md  extending.md
personalized_learning/mcp/: fastmcp_client.py  fastmcp_server.py
personalized_learning/mcp/data/career/: skill_map.json
personalized_learning/mcp/data/learning/: user_learning_state.json
personalized_learning/tests/: helpers.py  run_all_tests.py  test_e2e.py
use_cases/travel_activity_planner/: README.md  pyproject.toml  requirements.txt  start_all.ps1
use_cases/travel_activity_planner/a2a_agents/: README.md  base_executor.py  client.py  server_factory.py
use_cases/travel_activity_planner/a2a_agents/orchestrator_agent/: __main__.py  agent_card.py  agent_executor.py  (+2 more)
use_cases/travel_activity_planner/docs/: architecture.md  troubleshooting.md
use_cases/travel_activity_planner/mcp/: fastmcp_client.py  fastmcp_server.py  mcp_utils.py
use_cases/travel_activity_planner/tests/: helpers.py  run_all_tests.py  test_agents.py  test_local_tips.py  test_mcp.py  test_multi_turn.py
(+55 files in other folders)
