[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-learning"
version = "1.0.0"
description = "A2A + MCP personalized learning use case"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "python-dotenv",
    "a2a-sdk==0.3.22",
    "streamlit",
    "httpx",
    "uvicorn",
    "starlette",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a_agents*", "mcp*", "ui*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
